# CyberShop

./: .gitignore  Makefile  README.md  VULNERABILITIES.md  docker-compose.yml  frontend.html  install.sh
backend/: .env  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  sql_app.db  start.sh
backend/app/: admin.py  auth.py  cart.py  file_upload.py  main.py  middleware.py  mobile_api.py  models.py  products.py  schemas.py  session.py  user_panel.py
backend/app/models/: __init__.py  cart.py  comment.py  order.py  payment.py  product.py  review.py  user.py
backend/app/routes/: __init__.py  auth.py  cart.py  orders.py  products.py
backend/app/schemas/: __init__.py
backend/app/utils/: database.py
backend/scripts/: init_db.py  init_test_data.py  seed_data.py  start.sh
docs/: _config.yml
docs/criterios/: puntuacion.md
docs/evaluacion/: guia.md
docs/vulnerabilidades/: api-security.md  autenticacion.md  control-acceso.md  datos-sensibles.md  deserializacion.md  file-upload.md  inyecciones.md  logging.md  misconfiguracion.md  sql-injection.md  xss.md
frontend/: .dockerignore  .env  .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  config.js
frontend/src/components/: Navbar.js  OrderHistory.js  ProductCard.js  ProductComparison.js  ProductFilters.js  Reviews.js  SupportChat.js  WishList.js
frontend/src/pages/: Cart.js  Home.js  Login.js  ProductDetail.js  Register.js
frontend/src/services/: api.js
