[tool.poetry]
name = "cybershop-vuln-lab"
version = "1.0.0"
description = "API vulnerable para laboratorio de seguridad"
authors = ["Devin <devin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
python-jose = "*"
passlib = "*"
python-multipart = "*"
aiofiles = "*"
python-magic = "*"
requests = "*"
bcrypt = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
